--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -4,7 +4,7 @@
   
 }
 .top-image img {
-  width: 69vw;
+  width: 100%;
   height: 100%;
   object-fit: contain; /* or 'contain' if you want full image shown */
 }
